<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sarosh.openweatherapp.MainActivity">

    <TextView
        android:id="@+id/currentTemp"
        android:layout_width="209dp"
        android:layout_height="89dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:gravity="top|center"
        android:textColor="@color/colorAccent"
        android:textSize="65sp"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationText"
        tools:text="@string/dummy_temperature" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/weather_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentTemp"
        app:srcCompat="@drawable/current_icon" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="208dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/dummy_location"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputLocation"
        android:layout_width="273dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/dummy_location"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/locationButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="Go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="70sp"
        android:layout_height="20sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/humidty"
        android:textAlignment="center"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/weatherIcon"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weatherIcon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/wind_data"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@+id/weatherIcon"
        app:layout_constraintTop_toTopOf="@+id/weatherIcon" />

    <TextView
        android:id="@+id/windSpeed"
        android:layout_width="132dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toEndOf="@+id/weatherIcon"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="70sp"
        android:layout_height="20sp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/weatherIcon"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="171dp" />

    <Button
        android:id="@+id/tempSwitch"
        android:layout_width="64dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/unit"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/conditionDescription"
        android:layout_width="302dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />

    <TextView
        android:id="@+id/lastUpdate"
        android:layout_width="67dp"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/locationText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecastOne"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/tomorrow"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conditionDescription" />

    <TextView
        android:id="@+id/forecastTwo"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/day_after"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/forecastThree"
        app:layout_constraintStart_toEndOf="@+id/forecastOne"
        app:layout_constraintTop_toBottomOf="@+id/conditionDescription" />

    <TextView
        android:id="@+id/forecastThree"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/thirdDay"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conditionDescription" />

    <TextView
        android:id="@+id/fOneTemp"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inputLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastOne"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fTwoTemp"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inputLocation"
        app:layout_constraintStart_toEndOf="@+id/fOneTemp"
        app:layout_constraintTop_toBottomOf="@+id/forecastTwo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/fThreeTemp"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/inputLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/fTwoTemp"
        app:layout_constraintTop_toBottomOf="@+id/forecastThree"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
